--- a/Ch04-classification/logistic_regression.ipynb
+++ b/Ch04-classification/logistic_regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "id": "a4ccc821",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,9 @@
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "\n",
+    "np.random.seed(42)"
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "id": "747ee074",
    "metadata": {},
    "outputs": [],
@@ -96,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "id": "623206f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_binary = Default_dataset['balance'].copy()\n",
-    "y_binary = Default_dataset['default'].copy()"
+    "X_binary = Default_dataset['balance'].__deepcopy__().values.reshape(-1, 1)\n",
+    "y_binary = Default_dataset['default'].__deepcopy__().values"
    ]
   },
   {
@@ -115,12 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "id": "617bc095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_binary = LogisticRegression().fit(np.reshape(X_binary.to_numpy(), (-1, 1)), np.reshape(y_binary.to_numpy(), -1))"
+    "model_binary = LogisticRegression().fit(X_binary, y_binary)"
    ]
   },
   {
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "id": "cf76de82",
    "metadata": {},
    "outputs": [
@@ -213,7 +215,75 @@
     "\n",
     "$$\n",
     "\\theta_j := \\theta_j + \\alpha \\left(y^{(i)} - p\\left(x^{(i)}\\right)\\right) x_j^{(i)} \\tag{10}\n",
+    "$$\n",
+    "\n",
+    "We will use standardization on our predictor $X$ and performed gradient ascent on scaled predictor. However, after using gradient ascent, our coefficients will be Gaussian scaled, so we have to do some manipulation to get the original coefficients. To begin, we have the predicted scaled response as follows:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} \\approx \\hat{\\beta_0}^\\prime + \\hat{\\beta_j}^\\prime x_j \\tag{11}\n",
+    "$$\n",
+    "\n",
+    "As standardization is used on the predictors, we can rewrite $(11)$ as:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} \\approx \\hat{\\beta_0}^\\prime + \\hat{\\beta_j}^\\prime \\frac{x_j - \\mu_j}{\\sigma_j} \\tag{12}\n",
+    "$$\n",
+    "\n",
+    "Using some manipulation, we have:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} \\approx \\left( \\hat{\\beta_0}^\\prime - \\sum_{j \\neq 0} \\frac{\\hat{\\beta{j}}^\\prime}{\\sigma_j} \\right) +  \\frac{\\hat{\\beta_j}^\\prime}{\\sigma_j} x_j \\tag{13}\n",
+    "$$\n",
+    "\n",
+    "Therefore, we have the formula for the original coefficients:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\hat{\\beta_0} &= \\hat{\\beta_0}^\\prime - \\sum_{j \\neq 0} \\frac{\\hat{\\beta{j}}^\\prime}{\\sigma_j} \\notag \\\\\n",
+    "\n",
+    "\\hat{\\beta_j} &= \\frac{\\hat{\\beta_j}^\\prime}{\\sigma_j} \\notag\n",
+    "\\end{align}\n",
+    "\\tag{14}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61ff7d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_reg_grad_desc(X, y, learning_rate, epochs, tol):\n",
+    "    X = np.array(X).reshape(-1, 1) if (X.ndim == 1) else np.array(X)\n",
+    "    y = np.array(y).reshape(-1, 1)\n",
+    "    sample_num, feature_num = X.shape\n",
+    "\n",
+    "    X_mean = np.mean(X, axis=0)\n",
+    "    X_std = np.std(X, axis=0)\n",
+    "    X_scaled = (X - X_mean) / X_std\n",
+    "\n",
+    "    X_scaled = np.insert(X_scaled, 0, 1, axis=1)\n",
+    "\n",
+    "    theta = np.random.randn(feature_num + 1, 1) * 0.01\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        prev_theta = theta.copy()\n",
+    "\n",
+    "        z = expit(np.dot(X_scaled, theta))\n",
+    "\n",
+    "        update_factor = np.dot(X_scaled.T, (y - z)) / sample_num\n",
+    "        theta = theta + learning_rate * update_factor\n",
+    "\n",
+    "        theta_diff = np.linalg.norm(theta - prev_theta)\n",
+    "        if (theta_diff < tol):\n",
+    "            break\n",
+    "\n",
+    "    theta_orig = theta.copy()\n",
+    "    theta_orig[1:] = theta[1:] / X_std.reshape(-1, 1)\n",
+    "    theta_orig[0] = theta[0] - np.sum(theta[1:] * X_mean.reshape(-1, 1) / X_std.reshape(-1, 1))\n",
+    "\n",
+    "    return theta_orig"
    ]
   },
   {
@@ -221,55 +291,30 @@
    "id": "0226beb3",
    "metadata": {},
    "source": [
-    "Let's apply the above theory into our current dataset. First, we will set up necessary elements. In this case, we will set the learning rate to be 0.001."
+    "Let's apply the above theory into our current dataset. First, we will set up necessary elements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 126,
    "id": "af85c957",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coef_binary_grad_desc = np.zeros((2, 1))\n",
+    "X_binary_grad_desc = Default_dataset['balance'].__deepcopy__().values.reshape(-1, 1)\n",
+    "y_binary_grad_desc = (Default_dataset['default'].__deepcopy__().values == 'Yes').astype(int).reshape(-1, 1)\n",
     "\n",
-    "learning_rate = 0.001\n",
-    "\n",
-    "X_binary_grad_desc = np.reshape(Default_dataset['balance'].copy().to_numpy(), (-1, 1))\n",
-    "y_binary_grad_desc = np.reshape(((Default_dataset['default'].copy().to_numpy()) == 'Yes').astype(int), (-1, 1))\n",
-    "\n",
-    "X_binary_grad_desc = np.insert(X_binary_grad_desc, 0, 1, axis=1)\n",
-    "\n",
-    "n = len(X_binary_grad_desc)"
+    "theta_binary_grad_desc = log_reg_grad_desc(\n",
+    "    X_binary_grad_desc, y_binary_grad_desc,\n",
+    "    learning_rate=0.1,\n",
+    "    epochs=10000,\n",
+    "    tol=1e-6\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b21b89dd",
-   "metadata": {},
-   "source": [
-    "Then, we run the algorithm with 10 epochs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "11de4851",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epochs = 10\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    for i in range(n):\n",
-    "        sigmoid = expit(np.dot(X_binary_grad_desc[i], coef_binary_grad_desc))\n",
-    "        update_factor = np.reshape(learning_rate * (y_binary_grad_desc[i].item() - sigmoid) * X_binary_grad_desc[i], (-1, 1))\n",
-    "        coef_binary_grad_desc = coef_binary_grad_desc + update_factor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4af60066",
+   "id": "8b72dfcd",
    "metadata": {},
    "source": [
     "Print out the coefficients."
@@ -277,21 +322,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "52d84cd0",
+   "execution_count": 127,
+   "id": "69396a89",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4.01189301]\n",
-      " [-0.19058982]]\n"
+      "[[-1.03468546e+01]\n",
+      " [ 5.31960169e-03]]\n"
      ]
     }
    ],
    "source": [
-    "print(coef_binary_grad_desc)"
+    "print(theta_binary_grad_desc)"
    ]
   },
   {
@@ -312,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
    "id": "295657f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_multiple = Default_dataset.copy().drop(axis=1, columns='default')\n",
+    "X_multiple = Default_dataset.__deepcopy__().drop(axis=1, columns='default')\n",
     "X_multiple['student'] = (X_multiple['student'] == 'Yes').astype(int)\n",
-    "y_multiple = Default_dataset['default'].copy()"
+    "y_multiple = Default_dataset['default'].__deepcopy__()"
    ]
   },
   {
@@ -332,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "id": "48b0ad83",
    "metadata": {},
    "outputs": [],
@@ -350,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "id": "70c2a2f6",
    "metadata": {},
    "outputs": [
@@ -381,53 +426,26 @@
    "id": "398750f3",
    "metadata": {},
    "source": [
-    "Applying what we did above for every feature of the dataset. The learning rate is still 0.001"
+    "Applying what we did above for every feature of the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3d887a81",
+   "execution_count": 129,
+   "id": "37673087",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.001\n",
+    "X_multiple_grad_desc = Default_dataset.__deepcopy__().drop(axis=1, columns='default')\n",
+    "X_multiple_grad_desc['student'] = (X_multiple_grad_desc['student'] == 'Yes').astype(int)\n",
+    "y_multiple_grad_desc = (Default_dataset['default'].__deepcopy__().values == 'Yes').astype(int).reshape(-1, 1)\n",
     "\n",
-    "X_multiple_grad_desc = Default_dataset.copy().drop(axis=1, columns='default')\n",
-    "X_multiple_grad_desc['student'] = (X_multiple['student'] == 'Yes').astype(int)\n",
-    "\n",
-    "y_multiple_grad_desc = np.reshape(((Default_dataset['default'].copy().to_numpy()) == 'Yes').astype(int), (-1, 1))\n",
-    "\n",
-    "X_multiple_grad_desc = np.insert(X_multiple_grad_desc, 0, 1, axis=1)\n",
-    "\n",
-    "_, col_num = X_multiple_grad_desc.shape\n",
-    "coef_multiple_grad_desc = np.zeros((col_num, 1))\n",
-    "\n",
-    "n = len(X_multiple_grad_desc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10b37272",
-   "metadata": {},
-   "source": [
-    "And we run 10 epochs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "32a32c51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epochs = 10\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    for i in range(n):\n",
-    "        sigmoid = expit(np.dot(X_multiple_grad_desc[i], coef_multiple_grad_desc))\n",
-    "        update_factor = np.reshape(learning_rate * (y_multiple_grad_desc[i].item() - sigmoid) * X_multiple_grad_desc[i], (-1, 1))\n",
-    "        coef_multiple_grad_desc = coef_multiple_grad_desc + update_factor"
+    "theta_multiple_grad_desc = log_reg_grad_desc(\n",
+    "    X_multiple_grad_desc, y_multiple_grad_desc,\n",
+    "    learning_rate=0.1,\n",
+    "    epochs=10000,\n",
+    "    tol=1e-6\n",
+    ")"
    ]
   },
   {
@@ -440,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 130,
    "id": "dadde338",
    "metadata": {},
    "outputs": [
@@ -448,15 +466,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -1.2785    ]\n",
-      " [  0.        ]\n",
-      " [273.89810784]\n",
-      " [-23.77276171]]\n"
+      "[[-1.05222790e+01]\n",
+      " [-5.96930815e-01]\n",
+      " [ 5.51032345e-03]\n",
+      " [ 3.57650935e-06]]\n"
      ]
     }
    ],
    "source": [
-    "print(coef_multiple_grad_desc)"
+    "print(theta_multiple_grad_desc)"
    ]
   },
   {
@@ -477,14 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "id": "ca1f9d47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_raw = Default_dataset.copy().drop(axis=1, columns='default')\n",
+    "X_raw = Default_dataset.__deepcopy__().drop(axis=1, columns='default')\n",
     "X_raw['student'] = (X_raw['student'] == 'Yes').astype(int)\n",
-    "y_raw = Default_dataset['default'].copy()\n",
+    "y_raw = Default_dataset['default'].__deepcopy__()\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_raw, y_raw,\n",
@@ -505,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "id": "17b16871",
    "metadata": {},
    "outputs": [
@@ -554,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "id": "f6fefe14",
    "metadata": {},
    "outputs": [],
@@ -572,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 104,
    "id": "c9b0b8e7",
    "metadata": {},
    "outputs": [
@@ -602,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 105,
    "id": "423dff7b",
    "metadata": {},
    "outputs": [
@@ -624,10 +642,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2037cf2c220>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1dbee994430>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     },
